--- a/pages/lahaine.html
+++ b/pages/lahaine.html
@@ -6,7 +6,7 @@
         <title>La Haine</title>
     </head>
     <body>
-        <h1>La Haine .</h1>
+        <h1>La Haine</h1>
         <img src="../Images/La Haine_Banner_2.jpeg">
 
         <h3>Why I Love It</h3>
