--- a/pages/lahaine.html
+++ b/pages/lahaine.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>La Haine</h1>
-        <img src="../Images/La Haine_Banner_2.jpeg">
+        <img src="../images/La Haine_Banner_2.jpeg">
 
         <h3>Why I Love It</h3>
         <p>I've watched this film three tiems now in the past 2 years, and I cannot express enough how rewatchable
