--- a/pages/recipes_inthemood.html
+++ b/pages/recipes_inthemood.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>In the Mood for Love</h1>
-        <img src="../Images/In_the_Mood_for Love_Banner_2.jpeg">
+        <img src="../images/In_the_Mood_for Love_Banner_2.jpeg">
 
         <h3>Why I Love It</h3>
         <p>Heralded by many as one of the greatest films of the century so far, In the Mood for Love changed
